Homepage header image no longer distorted

--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -11,10 +11,13 @@
     margin-top: 100px;
 }
 
-#homepage header img{
+#cafe-contain img{
     width: 100%;
     height: 100%;
-    object-fit: fill;
+}
+
+#homepage header img{
+    object-fit: cover;
     border-radius: 250px 250px 0px 0px;
     z-index: 1;
 }
