--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -74,6 +74,6 @@ body{
 
 @media(max-width: 992px) {
     .header{
-        font-size: calc(1.625rem + 7.5vw);
+        font-size: calc(1.625rem + 7vw);
     }
 }
